# Hantei-chan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: glad.cmake  imgui.cmake
config/: config.h
glad/include/GLES2/: gl2.h
glad/include/glad/: glad.h
glad/src/: glad.c
notes/: EF.txt  IF.txt
res/: ha6gui.exe.manifest  res.rc  resource.h
src/: about.h  box_pane.cpp  box_pane.h  cg.cpp  cg.h  context_gl.h  draw_window.h  filedialog.cpp  filedialog.h  frame_disp.h  framedata.cpp  framedata.h  framedata_load.cpp  framedata_load.h  framedata_save.cpp  hitbox.h  imgui_utils.cpp  imgui_utils.h  ini.cpp  ini.h  main.cpp  main.h  main_frame.cpp  main_frame.h  main_pane.cpp  main_pane.h  mainframe.cpp  mainframe.h  misc.cpp  misc.h  pattern_disp.h  render.cpp  render.h  right_pane.cpp  right_pane.h  shader.cpp  shader.h  simple.frag  simple.vert  test.cpp  (+7 more)
src/ha6/: cg.cpp  cg.h  framedata.cpp  framedata.h  misc.cpp  misc.h
