cmake_minimum_required(VERSION 3.13...3.19)
project(ha6gui LANGUAGES C CXX)

add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")

set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )
set (EXE "ha6gui" )

include(glad)
include(imgui)
add_subdirectory(glm)

add_executable(${EXE} WIN32
	src/main.cpp
	src/main_frame.cpp
	src/main_pane.cpp
	src/render.cpp
	src/vao.cpp
	src/shader.cpp
	src/texture.cpp
	src/filedialog.cpp
	src/framedata.cpp
	src/cg.cpp
	src/misc.cpp
	
	res/res.rc
)

target_include_directories(${EXE} PRIVATE ".")
target_compile_definitions(${EXE} PRIVATE UNICODE _UNICODE WIN32_LEAN_AND_MEAN)

find_package(OpenGL REQUIRED)
target_link_libraries(${EXE} PRIVATE imgui glad OpenGL::GL glm)

if(MINGW)
	message(status "With -municode")
	target_link_options(${EXE} PRIVATE -municode)
endif()